fix count query in userMediaListCursor and add tests to it